--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <i class='bx bx-menu' id="menu"></i>
 </header>
 <div class="banner" id="banner" data-aos="zoom-in-down">
-    <div class="txt" data-aos="fade-up-left">
+    <div class="txt">
         <h1>I'm</h1>
         <h1>MORTEZA ABEDI!</h1>
     </div>
     <div class="image">
-        <img src="./image/haland.png" alt="" data-aos="fade-up-right">
+        <img src="./image/haland.png" alt="">
     </div>
 </div>
 <div class="master" id="master" data-aos="zoom-in-down">
-    <div class="box" onclick="openfull()"><a href="#">جدول لا لیگا</a></div>
+    <div class="box" onclick="openfull('./league.HTML')"><a href="#">جدول لا لیگا</a></div>
     <div class="box" onclick="openfull()"><a href="#">آمار برترین ها</a></div>
     <div class="box" onclick="openfull()"><a href="#">آمار بازیکنان</a></div>
     <div class="box" onclick="openfull()"><a href="#">رقابت های باشگاهی</a></div>
