--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="master" id="master" data-aos="zoom-in-down">
-        <div class="box" onclick="openfull('./league.HTML')"><a href="#">جدول لا لیگا</a></div>
+        <div class="box" onclick="openfull('league.html')"><a href="#">جدول لا لیگا</a></div>
         <div class="box" onclick="openfull()"><a href="#">آمار برترین ها</a></div>
         <div class="box" onclick="openfull()"><a href="#">آمار بازیکنان</a></div>
         <div class="box" onclick="openfull()"><a href="#">رقابت های باشگاهی</a></div>
