--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </div>
     <div class="bbuu">
         <img src="./image/20230807140724_[fpdl.in]_basketball-player-grabbing-ball-with-his-left-hand_23-2147604925_full.jpg" alt="" onclick="baz()">
-        <img src="./image/20230807140724_[fpdl.in]_basketball-player-grabbing-ball-with-his-left-hand_23-2147604925_full.jpg" alt="" onclick="baz()">
-        <img src="./image/20230807140724_[fpdl.in]_basketball-player-grabbing-ball-with-his-left-hand_23-2147604925_full.jpg" alt="" onclick="baz()">
-        <img src="./image/20230807140724_[fpdl.in]_basketball-player-grabbing-ball-with-his-left-hand_23-2147604925_full.jpg" alt="" onclick="baz()">
+        <img src="./image/20230807140633_[fpdl.in]_woman-tying-her-shoelaces-before-exercise_34840-103_full.jpg" alt="" onclick="baz()">
+        <img src="./image/most-headed-goals-in-the-champions-league-1024x715.png" alt="" onclick="baz()">
+        <img src="./image/WhatsApp Image 2023-11-26 at 23.56.18.jpeg" alt="" onclick="baz()">
     </div>
     <div class="aksbaz" onclick="baste()">
         <img src="" alt="" id="tasvir">
